--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,25 @@
     body {
         @apply bg-zinc-800;
     }
+
+    .container {
+        max-width: 1280px;
+    }
+
+    .display-2 {
+        font-size: 3.5rem;
+        font-weight: 900;
+        line-height: 1.2;
+    }
+
+    .h2, h2 {
+        font-size: 2.5rem;
+        font-weight: 700;
+        line-height: 1.2;
+    }
+
+    .grid-cols-4 {
+        grid-template-columns: repeat(4,minmax(0,1fr))!important;
+    }
+
 }
