--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,4 +26,16 @@
         grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
     }
 
+    .new-ecosystem {
+        animation: pulse-data-v-51d103c7 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+        background-color: rgba(255,255,255,.4980392157);
+    }
+
+    .img-ecosystem {
+        margin-left: auto;
+        margin-right: auto;
+        box-shadow: inset 1px 5px 12px rgb(0 0 0 / 44%) !important;
+    }
+    .img-ecosystem > img {
+    }
 }
